@@ -1,5 +1,5 @@
 "
-Copyright (c) 2007 Luca Bruno
+Copyright (c) 2007-2008 Luca Bruno
 
 This file is part of Smalltalk YX.
 
@@ -293,6 +293,7 @@ reverseDo: aBlock
 
 at: anIndex
     <primitive: 'Object_at'>
+    anIndex printNl
 	self primitiveFailed
 !
 
